--- a/chopchop.yml
+++ b/chopchop.yml
@@ -1,5 +1,13 @@
 insecure: false
 plugins:
+  - uri: "/status.shtml"
+    checks:
+      - name: GENEREX UPS
+        match:
+          - 'UPS Status:'
+        remediation: Make sure that GENEREX UPS access is restricted & monitored
+        description: GENEREX UPS is accessible | don't move this rule to avoid client timeout
+        severity: "Medium"
   - uri: "/"
     checks:
       - name: Jenkins
@@ -260,7 +268,7 @@ plugins:
         remediation: Disable phpinfo() in PHP.ini
         description: Verifies that the phpinfo() function is accessible
         severity: "Low"
-  - uri: "/phpMyAdmin"
+  - uri: "/phpmyadmin"
     checks:
       - name: PHPMyAdmin
         match:
@@ -435,7 +443,290 @@ plugins:
         no_match:
           - '<!DOCTYPE html>'
           - '<head>'
+        headers:
+          - "Accept-Ranges:bytes"
         remediation: Make sure your system isn't compromised
         description: Possible Trickbot Trojan Payload hosting in /ico/VidT6cErs
         status_code: 200
         severity: "High"
+  - uri: "/admin/libs/prettify-4-Mar-2013/prettify.css"
+    checks:
+      - name : Stormshield SNS Web Admin Console
+        headers:
+          - "Content-Type:text/css"
+        remediation: Make sure that Stormshield SNS Web Admin Console access is restricted & monitored
+        description: Stormshield SNS Web Admin Console is accessible
+        status_code: 200
+        severity: "Low"
+  - uri: "/auth"
+    checks:
+      - name : Stormshield Web Portal
+        match:
+          - '/data/flag-fr.jpg'
+          - '/data/i_auth.png'
+        remediation: Make sure that Stormshield Web Portal access is restricted & monitored
+        description: Stormshield Web Portal is accessible
+        status_code: 200
+        severity: "Informational"
+  - uri: "/restgui/start.html"
+    checks:
+      - name : Dell IDRAC
+        headers:
+          - "Content-Type:text/html"
+        remediation: Make sure that Dell IDRAC access is restricted & monitored
+        description: Dell IDRAC is accessible
+        status_code: 200
+        severity: "Informational"
+  - uri: "/ui"
+    checks:
+      - name : VMware ESXi
+        match:
+          - 'ng-app="esxUiApp"'
+        remediation: Make sure that VMware ESXi access is restricted & monitored
+        description: VMware ESXi is accessible
+        status_code: 200
+        severity: "Low"
+  - uri: "/vsphere-client"
+    checks:
+      - name : VMware vCenter
+        match:
+          - '<title>vSphere Web Client</title>'
+        remediation: Make sure that VMware vCenter access is restricted & monitored
+        description: VMware vCenter is accessible
+        status_code: 200
+        severity: "Low"
+  - uri: "/eai/index.html"
+    checks:
+      - name : Enovacom Suite V2
+        match:
+          - 'href="/eai/Ressources/Images/v2.ico"'
+        remediation: Make sure that EAI Enovacom Suite V2 access is restricted & monitored
+        description: EAI Enovacom Suite V2 is accessible
+        status_code: 200
+        severity: "Low"
+  - uri: "/mailscanner/login.php"
+    checks:
+      - name : MailWatch
+        match:
+          - '<title>MailWatch Login Page</title>'
+        remediation: Make sure that MailWatch access is monitored
+        description: MailWatch is accessible
+        status_code: 200
+        severity: "Low"
+  - uri: "/fog/management/index.php"
+    checks:
+      - name : FOG Project
+        match:
+          - '<title>Login</title>'
+          - '<b>FOG</b> Project'
+        remediation: Make sure that FOG Project access is monitored
+        description: FOG Project is accessible
+        status_code: 200
+        severity: "Low"
+  - uri: "/.well-known/security.txt"
+    checks:
+      - name: Security.txt
+        match:
+          - "Contact"
+        remediation: Great ! A Security.txt file for contact is present
+        description: Detects the presence of Security.txt file
+        status_code: 200
+        severity: "Informational"
+  - uri: "/"
+    checks:
+      - name : Microsoft-IIS/7.0 - Windows Server 2003/2008
+        headers:
+          - "Server:Microsoft-IIS/7.0"
+        remediation: Upgrade to maintened version
+        description: Microsoft-IIS/7.0 - Windows Server 2003/2008
+        severity: "Informational"
+      - name : Microsoft-IIS/7.5 - Windows Server 2003/2008
+        headers:
+          - "Server:Microsoft-IIS/7.5"
+        remediation: Upgrade to maintened version
+        description: Microsoft-IIS/7.5 - Windows Server 2003/2008
+        severity: "Informational"
+  - uri: "/"
+    checks:
+      - name : GE ViewPoint
+        match:
+          - '<title>ViewPoint System Status'
+        remediation: Make sure that GE ViewPoint System Status access is restricted & monitored
+        description: GE ViewPoint System Status is accessible / sensitive information leaking
+        status_code: 200
+        severity: "Low"
+  - uri: "/"
+    checks:
+      - name : Ascom IP-DECT Base Station
+        match:
+          - '<select product="Ascom IP-DECT Base Station"'
+        remediation: Make sure that Ascom IP-DECT Base Station access is restricted & monitored
+        description: Ascom IP-DECT Base Station is accessible
+        status_code: 200
+        severity: "Informational"
+  - uri: "/"
+    checks:
+      - name : EMC Unisphere
+        match:
+          - 'Unisphere<br>'
+        remediation: Make sure that EMC Unisphere access is restricted & monitored
+        description: EMC Unisphere is accessible
+        status_code: 200
+        severity: "Low"
+  - uri: "/"
+    checks:
+      - name : F-Secure Policy Manager Server
+        match:
+          - '<title>F-Secure Policy Manager Server</title>'
+        remediation: Make sure that F-Secure Policy Manager Server access is monitored
+        description: F-Secure Policy Manager Server is accessible
+        status_code: 200
+        severity: "Informational"
+  - uri: "/"
+    checks:
+      - name: Apache2 Debian Default Page
+        match:
+          - '<title>Apache2 Debian Default Page: It works</title>'
+        remediation: Remove the symbolic link from the Apache default configuration
+        description: Detects the presence of a default Apache page
+        severity: "Informational"
+  - uri: "/"
+    checks:
+      - name : Cisco IOS
+        headers:
+          - "Server:cisco-IOS"
+        remediation: Make sure that Cisco IOS access is restricted & monitored
+        description: Cisco IOS is accessible
+        severity: "Low"
+  - uri: "/XsEXPL"
+    checks:
+      - name: Xplore Web RIS
+        match:
+          - '<title>Xplore Exploitation</title>'
+        remediation: Make sure that Xplore Web RIS access is restricted & monitored
+        description: Xplore Web RIS is accessible
+        severity: "Informational"
+  - uri: "/zimbraAdmin"
+    checks:
+      - name: Zimbra Administration
+        match:
+          - 'Zimbra Collaboration Suite Web Client'
+        remediation: Make sure that Zimbra Administration access is restricted & monitored
+        description: Zimbra Administration is accessible
+        severity: "Low"
+  - uri: "/"
+    checks:
+      - name: NETAVIS Observer
+        match:
+          - '<title>NETAVIS Observer'
+        remediation: Make sure that NETAVIS Observer access is restricted & monitored
+        description: NETAVIS Observer is accessible
+        severity: "Informational"
+  - uri: "/"
+    checks:
+      - name : Odin
+        match:
+          - '<h1 title="Operations Automation">'
+        remediation: Make sure that Odin service automation access is restricted & monitored
+        description: Odin service automation is accessible
+        severity: "Informational"
+  - uri: "/"
+    checks:
+      - name : Nordex Control
+        headers:
+          - "Server:Jetty/3.1.8 (Windows 2000 5.0 x86)"
+        remediation: Make sure that Nordex Control access is restricted & monitored
+        description: Nordex Control is accessible
+        severity: "Low"
+  - uri: "/"
+    checks:
+      - name : EIG GaugeTech Electricity Meter
+        headers:
+          - "Server:EIG Embedded Web Server"
+        remediation: Make sure that EIG GaugeTech Electricity Meter access is restricted & monitored
+        description: EIG GaugeTech Electricity Meter is accessible
+        severity: "Low"
+  - uri: "/"
+    checks:
+      - name : Weave Scope
+        match:
+          - '<title>Weave Scope</title>'
+        remediation: Make sure that Weave Scope access is restricted & monitored
+        description: Weave Scope is accessible
+        severity: "Medium"
+  - uri: "/public/img/mongo-express-logo.png"
+    checks:
+      - name : Mongo Express
+        headers:
+          - 'Content-Type:image/png'
+        remediation: Make sure that Mongo Express access is restricted & monitored
+        description: Mongo Express is accessible
+        status_code: 200
+        severity: "High"
+  - uri: "/login.html"
+    checks:
+      - name : Polycom
+        headers:
+          - 'Server:lighttpd'
+        match:
+          - '<title>Polycom Login</title>'
+        remediation: Make sure that Polycom access is restricted & monitored
+        description: Polycom Video Conferencing is accessible
+        status_code: 200
+        severity: "Informational"
+  - uri: "/securityRealm/user/admin/search/index?q=a"
+    checks:
+      - name : Jenkins CVE-2018-1000861 (RCE)
+        match:
+          - 'Jenkins'
+          - '<title>Search for'
+        no_match:
+          - 'HTTP ERROR 404 Not Found'
+        remediation: Patch the server as soon as possible
+        description: Jenkins server is vulnerable to RCE CVE-2018-1000861
+        severity: "High"
+  - uri: "/?MAIN=TOPACCESS"
+    checks:
+      - name : TopAccess Toshiba MFP
+        match:
+          - '<!--<title class="clsTitle1">TopAccess</title>-->'
+        remediation: Make sure that TopAccess access is restricted & monitored
+        description: TopAccess Toshiba MFP is accessible
+        status_code: 200
+        severity: "Low"
+  - uri: "/"
+    checks:
+      - name : HP Printer
+        headers:
+          - "Server:Virata-EmWeb/R6_2_1"
+        remediation: Make sure that HP Printer access is restricted & monitored
+        description: HP Printer is accessible
+        status_code: 200
+        severity: "Low"
+  - uri: "/ePrint/ePrintConfigDyn.xml"
+    checks:
+      - name : HP Printer
+        headers:
+          - 'Content-Type:text/xml'
+        remediation: Make sure that HP Printer access is restricted & monitored
+        description: HP Printer is accessible
+        status_code: 200
+        severity: "Low"
+  - uri: "/"
+    checks:
+      - name : Printer (Lexmark, Dell, Toshiba, Sindoh)
+        headers:
+          - "Server:Lexmark_Web_Server"
+        remediation: Make sure that Printer access is restricted & monitored
+        description: Printer (Lexmark, Dell, Toshiba, Sindoh) is accessible
+        status_code: 200
+        severity: "Low"
+  - uri: "/config.html"
+    checks:
+      - name : Zebra Label Printer
+        match:
+          - '<H1>Zebra Technologies'
+        remediation: Make sure that Zebra Label Printer access is restricted & monitored
+        description: Zebra Label Printer is accessible
+        status_code: 200
+        severity: "Low"
